# rustbin

./: .env.example  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml  rust.yml
.sqlx/: query-30768c3fe905db2ec01cee1433b3bf0b01454a71f278db062d5f97ad947ca017.json  query-a580fdf021e5059c11ab8502344c2cb6134ddd2a668527e26a56b6cace72ca65.json  query-c84aad356963ad6385fdf080299e65075eb825c38f86671267882c82e2ffc98d.json
assets/: site.webmanifest
ffi/enry/: go.mod  go.sum  main.go
migrations/: 0001_init.sql
src/: app.rs  constants.rs  db.rs  enry_ffi.rs  error.rs  extractors.rs  handlers.rs  highlighter.rs  main.rs  preview.rs  render.rs  response.rs  routes.rs  state.rs
